# dashtam-api

./: .devcontainer.json  .dockerignore  .env.ci.example  .env.dev.example  .env.example  .env.test.example  .gitignore  .griffe.yml  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .markdownlint.yaml  .markdownlintignore  ARCHITECTURE_GUIDE.md  CHANGELOG.md  CI_TEST_INVESTIGATION.md  DOCKER_COMPOSE_COMPARISON.md  INFRASTRUCTURE_MIGRATION_PLAN.md  LICENSE  MKDOCS_PHASE2_HANDOFF.md  Makefile  Makefile.workflows  PHASE_3_PROGRESS.md  PR_DESCRIPTION.md  README.md  SESSION_SUMMARY.md  TEST_COVERAGE_PLAN.md  WARP.md  alembic.ini  callback_server.py  codecov.yml  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.test.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  release-phase2.yml  release-phase3.yml  test.yml
alembic/: env.py
alembic/seeds/: __init__.py  provider_seeder.py  rbac_seeder.py
alembic/versions/: 20251003_2149-bce8c437167b_initial_database_schema_with_timezone_.py  20251004_1825-e18e20278eaa_add_jwt_authentication_support.py  20251026_0118-3f81ad4dcc10_add_rate_limit_audit_logs_table.py  20251026_1652-92fe57a303d8_add_rate_limit_audit_logs_with_inet_and_.py  20251028_1645-a5270ef91c56_add_session_management_fields.py  20251029_2310-4a6cbff7f68b_add_token_versioning_hybrid_approach.py  20251103_0343-1a87a97a6d84_add_session_model_and_link_refreshtoken_.py  20251103_0402-462cce711b23_rename_is_trusted_device_to_is_trusted_.py  20251110_2340-bb433187db3b_initial_database_setup.py  20251115_2303-b7a1d68f632a_add_audit_logs_table.py  20251116_2052-74d01428951a_make_audit_logs_context_field_nullable.py  20251122_2043-4eaa719c463d_add_authentication_tables.py  20251126_0256-f989dbc0c129_add_session_management_fields_to_users_.py  20251126_0307-523a1b3b5c03_add_sessions_table_and_refresh_tokens_fk.py  20251126_0517-b46d4a9c9dd8_add_timezone_to_sessions_datetime_.py  20251127_0148-a6af49534f78_add_token_breach_rotation_fields.py  20251127_0306-f83d1b1ef7e2_fix_security_config_timezone.py  20251127_0630-f799ad043ec5_add_casbin_rule_table_for_rbac.py  20251127_0713-421e9f50970f_add_casbin_rule_v3_v5_columns.py  20251201_0310-15dca8efc4fd_add_provider_connections_table.py  20251201_0450-641ca1055f55_add_accounts_table.py  20251201_0525-8a71627a669d_add_transactions_table.py  20251203_0531-24e0820ac347_add_providers_table.py  20251203_0538-351384faf4aa_add_fk_provider_connections_provider_id.py  20251226_0128-e653302c726d_add_category_column_to_providers.py  20251226_0156-cc2348960654_add_holdings_table.py  20251226_0234-b568ab23752a_add_balance_snapshots_table.py
backups/pre-migration-20251001/: Makefile  docker-compose.test.yml
certs/: callback_cert.pem  callback_key.pem  cert.pem  key.pem
compose/: docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.prod.yml.example  docker-compose.test.yml
docker/: .dockerignore  Dockerfile  init-test-db.sh
docs/: .pages  DOCUMENTATION_AUDIT_2025-10-05.md  README.md  gen_ref_pages.py  index.md
docs/api/: .pages  accounts.md  admin-token-rotation.md  authentication.md  balance-snapshots-api.md  balance-snapshots.md  core.md  holdings-api.md  holdings.md  index.md  models.md  provider-connection.md  providers.md  services.md  token-rotation.md  transactions.md
docs/api-flows/: README.md  flow-template.md  index.md
docs/architecture/: .pages  account-domain-model.md  account.md  api-design-patterns.md  api-patterns.md  audit-trail-architecture.md  audit.md  authentication-architecture.md  authentication.md  authorization-architecture.md  authorization.md  balance-tracking-architecture.md  balance-tracking.md  cache-architecture.md  cache-key-patterns.md  cache-keys.md  cache.md  cqrs-pattern.md  cqrs-registry.md  cqrs.md  database-architecture.md  database.md  dependency-injection-architecture.md  dependency-injection.md  directory-structure.md  domain-driven-design-architecture.md  domain-driven-design.md  domain-events-architecture.md  domain-events.md  error-handling-architecture.md  error-handling.md  hexagonal-architecture.md  hexagonal.md  holding-domain-model.md  holding.md  index.md  logging.md  protocol-based-architecture.md  protocols.md  provider-domain-model.md  (+32 more)
docs/development/: README.md  index.md  (+1 more)
env/: .env.ci  .env.ci.example  .env.dev.example  .env.prod.example  .env.test.example  README.md
scripts/: generate-certs.sh  generate-keys.sh  test-api-flows.sh
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  conftest_async_old.py  conftest_original.py  test_config.py
tests_old_async/: conftest_old.py
tests_old_unmigrated_archived/: test_config.py  test_database.py  test_model_persistence.py
(+894 files in other folders)
