[project]
name = "dashtam"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "boto3>=1.40.45",
    "cryptography>=46.0.2",
    "email-validator>=2.3.0",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlmodel>=0.0.25",
    "urllib3>=2.5.0",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "types-passlib>=1.7.7.20250602",
    "types-python-dateutil>=2.9.0.20250822",
    "types-pytz>=2025.2.0.20250809",
    "types-requests>=2.32.4.20250913",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=0.30.1",
]
